--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,19 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=2.1.3
+mod_version=2.2.0
 
-mappings_version=20210106-1.15.1
-minecraft_version=1.15.2
-forge_version=31.2.47
+mappings_version=20201028-1.16.3
+minecraft_base_version=1.16
+minecraft_version=1.16.4
+forge_version=35.1.32
 
-jei_version=6.0.3.15
-libnonymous_version=1.1.1.5
-hwyla_version=1.10.8-B72
-top_version=1.15-2.0.6-6
-crafttweaker_version=6.0.0.4
+jei_base_version=1.16.2
+jei_version=7.1.+
+libnonymous_base_version=1.16.4
+libnonymous_version=1.2.0
+hwyla_base_version=1.16.2
+hwyla_version=1.10.11-B78
+top_version=3.0.2-beta-5
+crafttweaker_base_version=1.16.4
+crafttweaker_version=7.0.0.63
